--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,6 +33,11 @@
             
         </activity>
         <activity
+            android:name="com.example.questionloader.ResultPage"
+            android:label="@string/app_name" >
+            
+        </activity>
+        <activity
             android:name="com.example.questionloader.MainActivity"
             android:label="@string/app_name" >
             
