--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.questionloader"
+    package="usbong.android.questionloader"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -17,7 +17,7 @@
         
         
         <activity
-            android:name="com.example.questionloader.MainMenuActivity"
+            android:name="usbong.android.questionloader.MainMenuActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,18 +28,18 @@
         </activity>
         
         <activity
-            android:name="com.example.questionloader.SongSelection"
+            android:name="usbong.android.questionloader.SongSelection"
             android:label="@string/app_name" >
             
         </activity>
         <activity
-            android:name="com.example.questionloader.MainActivity"
+            android:name="usbong.android.questionloader.MainActivity"
             android:label="@string/app_name" >
             
             
         </activity>
         <activity
-            android:name="com.example.questionloader.SettingSelection"
+            android:name="usbong.android.questionloader.SettingSelection"
             android:label="@string/app_name" >
             
         </activity>
