--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,3 +6,4 @@ encoding//assets/Japanese/Sobakasu\ Test=UTF-8
 encoding//assets/Japanese/Voltes\ V\ Ending\ Song=UTF-8
 encoding//assets/Korean/I\ don't\ know,\ I\ don't\ know=UTF-8
 encoding//assets/Korean/Love\ is\ like\ snow=UTF-8
+encoding//assets/Korean/You\ are\ my\ spring=UTF-8
