fixed a simple song

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//assets/Chinese/A\ simple\ song=UTF-8
 encoding//assets/Chinese/Fairy\ Tale=UTF-8
 encoding//assets/Chinese/You\ by\ my\ side=UTF-8
 encoding//assets/Japanese/Doramon\ Opening\ Song=UTF-8
