--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,6 +39,12 @@
             
         </activity>
         <activity
+            android:name="usbong.android.questionloader.ReviewPage"
+            android:label="@string/app_name" >
+            
+            
+        </activity>
+        <activity
             android:name="usbong.android.questionloader.SettingSelection"
             android:label="@string/app_name" >
             
