--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -12,13 +12,14 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        
-        
+        android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+        >        
         
         <activity
             android:name="usbong.android.questionloader.MainMenuActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,26 +30,41 @@
         
         <activity
             android:name="usbong.android.questionloader.SongSelection"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait"            
+            >
             
         </activity>
         <activity
             android:name="usbong.android.questionloader.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait"                      
+            >
             
             
         </activity>
         <activity
             android:name="usbong.android.questionloader.ReviewPage"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait"                      
+            >
             
             
         </activity>
         <activity
             android:name="usbong.android.questionloader.SettingSelection"
-            android:label="@string/app_name" >
-            
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait"           
+            >            
         </activity>
+
+        <activity
+            android:name="usbong.android.questionloader.ResultPage"
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait"            
+            >
+        </activity>
+            
     </application>
 
 </manifest>
