--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="usbong.android.questionloader"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1April2015" >
 
     <uses-sdk
         android:minSdkVersion="8"
