--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="usbong.android.questionloader"
 
-    android:versionCode="5"
-    android:versionName="April24,2015" >
+    android:versionCode="6"
+    android:versionName="May4,2015" >
 
     <uses-sdk
         android:minSdkVersion="8"
