--- a/.classpath
+++ b/.classpath
@@ -3,8 +3,19 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry exported="true" kind="lib" path="libs/YouTubeAndroidPlayerApi.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry exported="true" kind="lib" path="libs/YouTubeAndroidPlayerApi.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/picasso-2.4.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/google-api-client-1.20.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/google-api-client-android-1.20.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/google-api-services-youtube-v3-rev136-1.20.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/google-http-client-1.20.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/google-http-client-android-1.20.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/google-http-client-jackson2-1.20.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/google-oauth-client-1.20.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jackson-core-2.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jsr305-1.3.9.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
