--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="usbong.android.questionloader"
-    android:versionCode="5"
-    android:versionName="April24,2015" >
-
+    android:versionCode="6"
+    android:versionName="May4,2015" >
 
     <uses-sdk
         android:minSdkVersion="8"
