--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="usbong.android.questionloader"
-    android:versionCode="10"
-    android:versionName="May26,2015" >
+    android:versionCode="12"
+    android:versionName="June13,2015" >
 
     <uses-sdk
         android:minSdkVersion="8"
