--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,11 +1,10 @@
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
+>>>>>>>=94457e6665fe4246f335c6c7a30326297d8a6890
 eclipse.preferences.version=1
 encoding//assets/Japanese/Doraemon\ Opening\ Song=UTF-8
 encoding//assets/Japanese/Kimi\ no\ Shiranai\ Monogatari=UTF-8
 encoding//assets/Japanese/Sobakasu=UTF-8
-<<<<<<< HEAD
+encoding//assets/Japanese/Voltes\ V\ Ending\ Song=UTF-8
 encoding//assets/Japanese/Voltes\ V\ Opening\ Song=UTF-8
 encoding//assets/Japanese/We\ Are\ One\ Piece=UTF-8
-encoding//assets/Korean/Arirang=UTF-8
-=======
-encoding//assets/Japanese/Voltes\ V\ Ending\ Song=UTF-8
->>>>>>> 94457e6665fe4246f335c6c7a30326297d8a6890
