--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,11 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="lib" path="libs/YouTubeAndroidPlayerApi.jar"/>
+	<classpathentry exported="true" kind="lib" path="commons-codec-1.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="commons-logging-1.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="httpclient-4.2.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="httpclient-cache-4.2.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="httpcore-4.2.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="httpmime-4.2.5.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
