--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,14 +1,12 @@
 =\=\=\=\=\=\=
 <<<<<<<=HEAD
->>>>>>>=94457e6665fe4246f335c6c7a30326297d8a6890
+>>>>>>>=2630c58938752403574ce0ad48b70eca6dbdd338
 eclipse.preferences.version=1
+encoding//assets/Japanese/Again\ Yui=UTF-8
 encoding//assets/Japanese/Doraemon\ Opening\ Song=UTF-8
-<<<<<<< HEAD
 encoding//assets/Japanese/Kimi\ no\ Shiranai\ Monogatari=UTF-8
-encoding//assets/Japanese/Sobakasu=UTF-8
-=======
 encoding//assets/Japanese/One\ Piece\ Opening\ We\ Are=UTF-8
->>>>>>> 2630c58938752403574ce0ad48b70eca6dbdd338
+encoding//assets/Japanese/Sobakasu=UTF-8
 encoding//assets/Japanese/Voltes\ V\ Ending\ Song=UTF-8
 encoding//assets/Japanese/Voltes\ V\ Opening\ Song=UTF-8
 encoding//assets/Japanese/We\ Are\ One\ Piece=UTF-8
