--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,7 @@
 >>>>>>>=2630c58938752403574ce0ad48b70eca6dbdd338
 eclipse.preferences.version=1
 encoding//assets/Japanese/Again\ Yui=UTF-8
+encoding//assets/Japanese/CHA-LA\ HEAD-CHA-LA\ Dragonball\ Z=UTF-8
 encoding//assets/Japanese/Doraemon\ Opening\ Song=UTF-8
 encoding//assets/Japanese/Kimi\ no\ Shiranai\ Monogatari=UTF-8
 encoding//assets/Japanese/One\ Piece\ Opening\ We\ Are=UTF-8
