--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -11,5 +11,6 @@ encoding//assets/Japanese/Sobakasu=UTF-8
 encoding//assets/Japanese/Voltes\ V\ Ending\ Song=UTF-8
 encoding//assets/Japanese/Voltes\ V\ Opening\ Song=UTF-8
 encoding//assets/Japanese/We\ Are\ One\ Piece=UTF-8
+encoding//assets/Korean/I\ don't\ know,\ I\ don't\ know\ Tahiti=UTF-8
 encoding//assets/Mandarin/A\ simple\ song\ Wang\ Leehom=UTF-8
 encoding//src/usbong/android/questionloader/MainActivity.java=UTF-8
