--- a/project.properties
+++ b/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../../../workspace/NewQuickAction3D
+android.library.reference.1=../NewQuickAction3D
 android.library=false
