Particles readable from file.
System.out.println not yet removed. too sleepy.

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -14,3 +14,4 @@ encoding//assets/Japanese/We\ Are\ One\ Piece=UTF-8
 encoding//assets/Korean/I\ don't\ know,\ I\ don't\ know\ Tahiti=UTF-8
 encoding//assets/Mandarin/A\ simple\ song\ Wang\ Leehom=UTF-8
 encoding//src/usbong/android/questionloader/MainActivity.java=UTF-8
+encoding/<project>=UTF-8
