--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,73 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="usbong.android.questionloader"
-
-    android:versionCode="6"
-    android:versionName="May4,2015" >
+    android:versionCode="14"
+    android:versionName="Aug5,2015" >
 
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="16" />
-    
-    <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
-        >        
-        
+        android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
         <activity
-            android:name="usbong.android.questionloader.MainMenuActivity"
-            android:label="@string/app_name" 
-            android:screenOrientation="portrait"
-            >
+            android:name=".MainMenuActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            
-        </activity>
-        
-        <activity
-            android:name="usbong.android.questionloader.SongSelection"
-            android:label="@string/app_name" 
-            android:screenOrientation="portrait"            
-            >
-            
         </activity>
         <activity
-            android:name="usbong.android.questionloader.MainActivity"
-            android:label="@string/app_name" 
-            android:screenOrientation="portrait"                      
-            >
-            
-            
+            android:name=".SongSelection"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name="usbong.android.questionloader.ReviewPage"
-            android:label="@string/app_name" 
-            android:screenOrientation="portrait"                      
-            >
-            
-            
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name="usbong.android.questionloader.SettingSelection"
-            android:label="@string/app_name" 
-            android:screenOrientation="portrait"           
-            >            
+            android:name=".ReviewPage"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
-
         <activity
-            android:name="usbong.android.questionloader.ResultPage"
-            android:label="@string/app_name" 
-            android:screenOrientation="portrait"            
-            >
+            android:name=".SettingSelection"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
-            
+        <activity
+            android:name=".ResultPage"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".LoadingScreen"
+            android:label="@string/title_activity_loading_screen" >
+        </activity>
     </application>
 
 </manifest>
